# seiia

./: README.md  pyproject.toml
dockerfiles/: mssql.dockerfile  mysql.dockerfile  oracle.dockerfile
src/embedder/: __init__.py  db_models.py  embeddings.py  envs.py  http_exceptions.py  persist_table_embeddings.py  text_preprocess.py
src/embedder/dags/: __init__.py  index_embedding.py  load_dag_queue.py  trigger_dag_api_rest.py  update_metadata.py
src/embedder/db_connection/: __init__.py  db_connect.py  instances.py  solr_handlers.py
src/embedder/extract_docs/: __init__.py  external_sei.py  extract_content.py  extract_doc_int_sei.py  internal_sei.py  metadata_sei.py  type_doc_sei.py
src/embedder/query_templates/: __init__.py  solr_template.py  sql_templates.py
